--- a/ZinniaCocoaTouch.xcodeproj/xcshareddata/xcschemes/ZinniaCocoa.xcscheme
+++ b/ZinniaCocoaTouch.xcodeproj/xcshareddata/xcschemes/ZinniaCocoa.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "B72741D31AA5643900914B7C"
-               BuildableName = "ZinniaCocoaTouch.framework"
-               BlueprintName = "ZinniaCocoaTouch"
+               BlueprintIdentifier = "B725FBCF1B05BD76002AAB18"
+               BuildableName = "ZinniaCocoa.framework"
+               BlueprintName = "ZinniaCocoa"
                ReferencedContainer = "container:ZinniaCocoaTouch.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -27,23 +27,14 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B72741D31AA5643900914B7C"
-            BuildableName = "ZinniaCocoaTouch.framework"
-            BlueprintName = "ZinniaCocoaTouch"
-            ReferencedContainer = "container:ZinniaCocoaTouch.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "B72741DE1AA5643900914B7C"
-               BuildableName = "ZinniaCocoaTouchTests.xctest"
-               BlueprintName = "ZinniaCocoaTouchTests"
+               BlueprintIdentifier = "B725FBD91B05BD76002AAB18"
+               BuildableName = "ZinniaCocoaTests.xctest"
+               BlueprintName = "ZinniaCocoaTests"
                ReferencedContainer = "container:ZinniaCocoaTouch.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -59,15 +50,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B72741D31AA5643900914B7C"
-            BuildableName = "ZinniaCocoaTouch.framework"
-            BlueprintName = "ZinniaCocoaTouch"
-            ReferencedContainer = "container:ZinniaCocoaTouch.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -78,9 +60,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B72741D31AA5643900914B7C"
-            BuildableName = "ZinniaCocoaTouch.framework"
-            BlueprintName = "ZinniaCocoaTouch"
+            BlueprintIdentifier = "B725FBCF1B05BD76002AAB18"
+            BuildableName = "ZinniaCocoa.framework"
+            BlueprintName = "ZinniaCocoa"
             ReferencedContainer = "container:ZinniaCocoaTouch.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
